<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#F5F5DC">

    <FrameLayout
        android:layout_width="564dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/empty_board"
        android:paddingTop="100dp">

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <!-- Table Layout for Cooking Ware -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_regular"
                android:gravity="center"
                android:text="@string/recipe_header"
                android:textColor="#F75526"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">
                <!-- Table Header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="4dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ingredient_header"
                        android:textSize="18sp" />

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="6dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cookware_header"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Table Rows -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ingredient_row_1"
                        android:textSize="16sp" />

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cookware_row_1"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ingredient_row_2"
                        android:textSize="16sp" />

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cookware_row_2"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ingredient_row_3"
                        android:textSize="16sp" />

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cookware_row_3"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ingredient_row_4"
                        android:textSize="16sp" />

                    <TextView
                        style="@style/Tabletext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cookware_row_4"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:contentDescription="Back"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

</FrameLayout>